@@ -1,9 +1,11 @@
-# $NetBSD: Makefile,v 1.3 2008/10/25 22:27:34 apb Exp $
+# $NetBSD: Makefile,v 1.4 2009/04/28 22:31:52 roy Exp $
 #
 
 PROG=		dhcpcd
-SRCS=		bpf.c client.c common.c configure.c dhcp.c dhcpcd.c \
-		if-bsd.c logger.c net.c signals.c
+SRCS=		arp.c bind.c common.c control.c configure.c dhcp.c dhcpcd.c \
+		duid.c eloop.c if-options.c ipv4ll.c if-pref.c ipv4ll.c \
+		net.c signals.c
+SRCS+=		bpf.c if-bsd.c
 
 .include <bsd.own.mk>
 
